Added links to the Manage SSL Certificate page to download the key in PEM or PKCS12 format.
DKIM signing of outgoing email can now be enabled on the new DomainKeys Identified Mail page. This also configures verification of signatures on incoming email.
New virtual servers with an SSL website and status monitoring enabled will now also have the expiry date of their SSL certificate checked, to give advance warning when a cert is about to expire.
Added an Italian translation, thanks to Andrea Di Mario.
---- Changes since 3.81 ----
Added a template option to specify file types to not perform variable substitution on when copying from the /etc/skel directory.
Updated the Trac script installer to version 0.12.1, Instiki to 0.19.1, Rails to 3.0.1, phpMyAdmin to 3.3.8, Moodle to 1.9.10, Horde Webmail to 1.2.8, Horde to 3.3.10, IMP to 4.3.8, ZenCart to 1.3.9h, SugarCRM to 6.0.3, Redmine to 1.0.3, SMF to 1.1.12, and TWiki to 5.0.1.
Virtual server backups can now be to multiple destinations, both local and remote. The time-consuming process of compressing each domain is done only once, and the resulting file then transferred to each destination.
The maximum message size to check for spam can now be set even when regular spamassassin is used, as well as when using spamc.
When Webalizer is enabled for a domain, allowed users for the /stats URL path can now be edited on the Protected Web Directories page.
Fixed DKIM support to handle large numbers of domains.
Added byte quota sizes to the list-domains, list-users and list-resellers API calls, which are easier for code to parse.
---- Changes since 3.82 ----
Updated the Bugzilla script installer to version 3.6.3, Joomla to 1.5.22, TextPattern to 4.3.0, Dokuwiki to 2010-11-07, CMS Made Simple to 1.9, and phpMyFAQ to 2.6.11.