@@ -1260,3 +1260,4 @@ Fixed DKIM support to handle large numbers of domains.
 Added byte quota sizes to the list-domains, list-users and list-resellers API calls, which are easier for code to parse.
 ---- Changes since 3.82 ----
 Updated the Bugzilla script installer to version 3.6.3, Joomla to 1.5.22, TextPattern to 4.3.0, Dokuwiki to 2010-11-07, CMS Made Simple to 1.9, and phpMyFAQ to 2.6.11.
+When creating a virtual server with the create-domain API command, custom fields can be set with the --field-name flag.
